--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body {
     background-color: blue;
 }
+
+.divResultado {
+    text-align: center;
+    padding: .5rem;
+    border: 1px solid #26c6da;
+    background-color: rgb(127, 224, 237);
+    margin-top: 1rem;
+    position: relative;
+}
+
+.textoCotizacion {
+    color: #070707;
+    padding: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0;
+}
