--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,82 @@ body {
     background: linear-gradient(lightblue,DeepSkyBlue);
     margin: 0;
 }
-
+#titulo_Cotiza{
+    padding: 10px;
+    text-decoration: underline;
+    text-align: end;
+    font-weight: 600;
+    color: coral;
+}
+#texto_Cotiza{
+    padding: 10px;
+    text-align: end;
+    color: white;
+}
+#btn_Cotiza{
+    background-color: blanchedalmond;
+    color: black;
+    padding: 10px;   
+    margin-left: 80%;
+    width: 200px;
+    margin-top: 100px;
+}
+#btn_Cotiza:hover{
+    width: 230px;
+    height: 60px;
+    font-size: x-large;
+    font-weight: 600;
+}
+/* footer */
+.footer {
+    background-color: black;
+    height: 200px; }
+  
+  .redes-container {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  
+  .redes-container ul li {
+    display: inline-block;
+    margin: 0 5px;
+    height: 50px;
+    width: 50px;
+    text-align: center; }
+  
+  .redes-container ul li a {
+    display: block;
+    padding: 0 10px;
+    background-color: #333;
+    color: white;
+    line-height: 50px;
+    font-size: 18px;
+    box-shadow: 0 3px 5px 0px rgba(0, 0, 0, 0.2);
+    transition: .2s; }
+  
+  .redes-container ul:hover a {
+    filter: blur(2px); }
+  
+  .redes-container ul li a:hover {
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
+    filter: none; }
+  
+  .redes-container ul li .facebook:hover {
+    background-color: #3b5998; }
+  
+  .redes-container ul li .instagram:hover {
+    background-color: #2A5B83; }
+  
+  .redes-container ul li .email:hover {
+    background-color: #C30907; }
+  
+  .redes-container ul li .whatapp:hover {
+    background-color: #128c7e; }
+  
+  .Direccion {
+    text-align: center;
+    color: white; }
 @media (max-width: 700px) {
     .Div_Index {background-color: teal;height: auto;}
     #logoPrincipal {margin-left: 0px; height: 150px;}
