--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-@keyframes mostarPlanes {
-    0% { transform: translateX(-100px);}
-    100% { transform: translateX(0px);}
-}
-
 ul  {
     list-style: none;
 }
@@ -14,7 +9,13 @@ body {
     max-width: 150px;
     margin: 20px;
 }
-
+.P__Index{
+    font-size: x-large;
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    font-weight: 700;
+}
 .Imagen_Introduccion { 
     opacity: 0;
     transition: all 0.5s;
@@ -52,6 +53,7 @@ body {
     margin: 0;
 }
 #titulo_Cotiza{
+    margin-left: 20px;
     padding: 10px;
     text-decoration: underline;
     text-align: end;
@@ -63,38 +65,53 @@ body {
     text-align: end;
     color: white;
 }
-#btn_Cotiza{
-    background-color: blanchedalmond;
-    color: black;
-    padding: 10px;   
-    margin-left: 80%;
-    width: 200px;
+.Cotizar {
+    margin: 10px;
+}
+.btnCotizar{
     margin-top: 100px;
+    margin-left: 50%;
+    padding: 10px;
+    background-color: snow;
+    width: 400px;
+    border-color: black;
 }
-#btn_Cotiza:hover{
-    width: 230px;
-    height: 60px;
+.divResultado {
+    text-align: center;
+    padding: .5rem;
+    border: 1px solid;
+    margin-top: 1rem;
+    position: relative;
     font-size: x-large;
-    font-weight: 600;
 }
-/* footer */
+.textoCotizacion {
+    color: #070707;
+    padding: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    background: linear-gradient(lightblue,DeepSkyBlue);
+    margin: 0;
+}
+
 .footer {
     background-color: black;
     height: 200px; }
   
-  .redes-container {
+.redes-container {
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center; 
+}
   
-  .redes-container ul li {
+.redes-container ul li {
     display: inline-block;
     margin: 0 5px;
     height: 50px;
     width: 50px;
-    text-align: center; }
+    text-align: center; 
+}
   
-  .redes-container ul li a {
+.redes-container ul li a {
     display: block;
     padding: 0 10px;
     background-color: #333;
@@ -102,34 +119,36 @@ body {
     line-height: 50px;
     font-size: 18px;
     box-shadow: 0 3px 5px 0px rgba(0, 0, 0, 0.2);
-    transition: .2s; }
+    transition: .2s; 
+}
   
-  .redes-container ul:hover a {
-    filter: blur(2px); }
+.redes-container ul:hover a {
+    filter: blur(2px); 
+}
   
-  .redes-container ul li a:hover {
+.redes-container ul li a:hover {
     transform: translateY(-3px) scale(1.05);
     box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
-    filter: none; }
-  
-  .redes-container ul li .facebook:hover {
-    background-color: #3b5998; }
-  
-  .redes-container ul li .instagram:hover {
-    background-color: #2A5B83; }
-  
-  .redes-container ul li .email:hover {
-    background-color: #C30907; }
-  
-  .redes-container ul li .whatapp:hover {
-    background-color: #128c7e; }
-  
-  .Direccion {
-    text-align: center;
-    color: white; }
-@media (max-width: 700px) {
-    .Div_Index {background-color: teal;height: auto;}
-    #logoPrincipal {margin-left: 0px; height: 150px;}
-
+    filter: none; 
 }
-
+  
+.redes-container ul li .facebook:hover {
+    background-color: #3b5998; 
+}
+  
+.redes-container ul li .instagram:hover {
+    background-color: #2A5B83; 
+}
+  
+.redes-container ul li .email:hover {
+    background-color: #C30907; 
+}
+  
+.redes-container ul li .whatapp:hover {
+    background-color: #128c7e; 
+}
+  
+.Direccion {
+    text-align: center;
+    color: white; 
+}
